fixing word-wrap bug and taking out latest news section

--- a/src/components/article/style.css
+++ b/src/components/article/style.css
@@ -2,6 +2,7 @@
 	box-shadow: 2px 2px 6px -1px #333;
 	padding: 1.8rem 1.8rem 2.2rem;
 	transition: all .5s ease;
+	word-wrap: break-word;
 }
 
 .article:hover {
